# cgo-pprof-rs

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
bench/: cpuprofile.go  main.go  pprof_api.go  util.go
src/: ffi.rs
